1.0.1:
- Display navigation bar in pages
- Add option to allow local file access

1.0.0:
- Initial release